Mon Nov 17 09:59:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* release.sh: Use 'make distcheck' rather than 'make dist'.

Mon Nov 17 01:13:17 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Add src/manconv_main.c and src/zsoelim_main.c.
	* po/man-db.pot, po/*.po: Update.

Mon Nov 17 00:53:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Update.

Mon Nov 17 00:39:14 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Mangle return value into a value
	  suitable for passing to exit (Debian bug #477305).

Mon Nov 17 00:06:28 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Make bare .so includes (e.g. ".so foo.1" rather than ".so
	man1/foo.1") work, although only within the same manual page
	hierarchy for now. Reported by Mike Frysinger; partially fixes
	Debian bug #503472.

	* src/zsoelim.l (zsoelim_open_file): Attempt to handle bare .so
	  includes using look_for_file.
	* src/Makefile.am (zsoelim_SOURCES): Add globbing.c, globbing.h, and
	  util.c.

Sun Nov 16 23:34:02 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Improve handling of systems without internationalisation support.
	Reported by Mike Frysinger.

	* include/manconfig.h.in (locale_changed): New macro.
	* src/man.c (main), src/whatis.c (main): Use it.
	* src/manconv.c (check_preprocessor_encoding, try_iconv): Declare
	  only if HAVE_ICONV is defined.
	  (manconv): If HAVE_ICONV is not defined, supply a replacement that
	  just passes data straight through.
	* src/whatis.c (simple_convert): Declare only if HAVE_ICONV is
	  defined and supply a macro replacement otherwise, since in the
	  latter case iconv_t is not defined.

Sun Nov 16 18:40:09 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* manual/misc.me (Credits): Update with contributors of
	  non-translation patches since I started maintaining man-db;
	  mention man/THANKS for translator credits. Probably still missing
	  some people, as ever ...
