@@ -1,3 +1,8 @@
+Mon Nov 17 10:18:10 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* m4/longdouble.m4: Remove; gettext no longer installs this.
+	* man/Makefile.am (EXTRA_DIST): Distribute LINGUAS and LINGUAS.po4a.
+
 Mon Nov 17 09:59:19 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* release.sh: Use 'make distcheck' rather than 'make dist'.
